--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="refresh" content="0;url=https://wordpress-yellow-oyster-sistemeio674820.codeanyapp.com/de-de/">
+<meta http-equiv="refresh" content="0;url=https://tr-de-go-qhluifme377960.codeanyapp.com/app">
 </head>
 <body>
 </body>
